--- a/main.css
+++ b/main.css
@@ -3,8 +3,8 @@
     margin: 0px;
     padding: 0px;
 }
-
-ul{
+/*Index.html*/
+#index-ul{
     background-color: white;
     width: 400px;
     height: 50px;
@@ -19,19 +19,30 @@ ul{
     font-weight: bold;
 }
 
-nav ul li{
+#index-ul li{
     display: inline-block;
     margin-top: 14px;
 }
 
-nav ul li a{
+#index-ul li a{
     margin-right: 30px;
     text-decoration: none;
     color: red;
 }
 
-nav ul li a:hover{
+#index-ul li a:hover{
     color:  rgb(39, 63, 123);
+}
+
+#haribo-nav{
+    position: fixed;
+    top: 20px;
+    right: 30px;
+    z-index: 4;
+}
+
+#haribo-nav img{
+    width: 50px;
 }
 
 .conteiner {
@@ -44,7 +55,7 @@ nav ul li a:hover{
 }
 
 .slider {
-    display: flex;
+    display: flex;  
     margin-left: 50px;
     height: 650px;
     aspect-ratio: 16 / 9;
@@ -144,10 +155,25 @@ nav ul li a:hover{
 #image-video-text{
     margin-top: 195px;
     height: 367.06px;
-    text-align: center;
     font-family: sans-serif;
     font-size: 20px;
     color: white;
+    padding-top: 40px;
+    padding-left: 50px;
+}
+
+#image-video-text h1{
+    margin-top: 40px;
+    margin-bottom: 30px;
+    font-size: 60px;
+    text-align: center;
+}
+
+#image-video-text p{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 30px;
+    text-align: left;
 }
 
 #image-video{
@@ -299,4 +325,131 @@ nav ul li a:hover{
     color: white;   
     font-size: 30px;
     font-weight: bold;
+}
+
+/*products*/
+
+.haribo-logo{
+    position: fixed;
+    top: 20px;
+    left: 30px;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0;
+    width: 100vw;
+    height: 100vh;
+}
+
+.item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
+.item img {
+    width: 70%;
+    height: auto;
+    object-fit: contain;
+}
+
+.goldbears     { background: #c59b2c; }
+.green         { background: #4dba48; }
+.red           { background: #cc1a1a; }
+.blue          { background: #1f78d1; }
+.turquoise     { background: #00a886; }
+.orange        { background: #f7931e; }
+.yellow        { background: #f7d64a; }
+.darkblue      { background: #003f87; }
+.lime          { background: #8cc63f; }
+
+.footer-links-products{
+    display: flex;
+    gap: 80px;
+    background-color: rgb(31, 89, 214);
+    width: 100%;
+    margin-top: 500px;
+}
+
+/*about us*/
+
+#haribo-logo{
+    position: fixed;
+    top: 25px;
+    left: 25px;
+}
+
+#background-about{
+    background-image: url(images/fondo-aboutus.png);
+    height: 700px;
+    padding-left: 150px;
+    padding-top: 300px;
+}
+
+.text-box{
+    border-radius: 200px 400px 200px 300px / 150px 250px 250px 200px;
+    background-color: red;
+    text-align: left;
+    padding: 100px;
+    color: white;
+    width: 700px;
+    font-family: sans-serif;
+    font-size: 30px;
+    height: 550px;
+}
+
+
+.top-text {
+    padding: 60px 80px;
+    margin-top: 200px;
+    font-family: sans-serif;
+}
+
+.top-text h1 {
+    color: #d62828;
+    font-size: 2.4rem;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+
+.top-text p {
+    max-width: 700px;
+    line-height: 1.6;
+}
+
+#section-aboutus{
+    background-color: red;
+    font-family: sans-serif;
+}
+
+#about-div{
+    float: left;
+    width: 500px;
+    margin-left: 60px;
+    margin-top: 150px;
+    color: white;
+    font-family: sans-serif;
+}
+
+#about-div h1{
+    margin-bottom: 30px;
+    font-weight: bold;
+}
+
+#about-div ul{
+    list-style-type: none;
+    margin-bottom: 30px;
+}
+
+#about-div p{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#about-image{
+    width: 600px; 
+    margin-left: 300px;
 }
